--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,6 +1,6 @@
 spring:
   config:
-    import: configserver:http://localhost:8071
+    import: optional:configserver:http://localhost:8071
   application:
     name: healthyeats-mealservice
   profiles:
