--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,10 +1,10 @@
 spring:
   config:
-    import: configserver:http://localhost:8071
+    import: configserver:https://healthyeats-configserver-dev.herokuapp.com/
   application:
     name: healthyeats-mealservice
   profiles:
-    active: dev
+    active: prod
 #eureka:
 #  instance:
 #    prefer-ip-address: true
