--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,8 @@
 spring.data.mongodb.database=healthy-Eats-meals-db
 #server.port=8091
+queue.name=testqueue
+fanout.exchange=testqueue-exchange
+spring.rabbitmq.host=localhost
+spring.rabbitmq.port=5672
+spring.rabbitmq.username=guest
+spring.rabbitmq.password=guest
